// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should snapshot correctly layers Icon without src filled 1`] = `
<div>
  layers
</div>
`;

exports[`should snapshot correctly one layer Icon without src filled 1`] = `
<div>
  layer
</div>
`;

exports[`should snapshot correctly when src is filled 1`] = `
<span
  className=" bp3-icon"
>
  <img
    alt=""
    className="CRUD-nav__icon"
    src="path/to/image.png"
  />
</span>
`;
